--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ disqus:
 #################################### global configure #######################################
 
 username: minixbeta
-baseurl: /
+baseurl: 
 markdown: redcarpet
 safe: false
 highlighter: pygments
