--- a/_config.yml
+++ b/_config.yml
@@ -66,8 +66,8 @@ nav:
 #Author config
 author:
     name: minixbeta
-    email: xkzbeta@outlook.comment
-    imageLink: https://avatars.githubusercontent.com/minixbeta
+    email: xkzbeta@outlook.com
+    imageLink: https://avatars.githubusercontent.com/minixalpha
     simpleIntro: 我是 minixbeta
     detailIntro:
       <p>Jekyll 是一个简洁的、特别针对博客平台的 静态网站 生成器。它使用一个模板目录作为网站布局的基础框架，并在其上运行 Textile 、 Markdown 或 Liquid 标记语言的转换器，最终生成一个完整的静态Web站点，可以被放置在Apache或者你喜欢的其他任何Web服务器上。它同时也是 GitHub Pages 、一个由 GitHub 提供的用于托管项目主页或博客的服务，在后台所运行的引擎。</p>
@@ -82,7 +82,7 @@ follow:
   - class: icon-renren
     url: http://renren.com
   - class: icon-github-alt
-    url: http://github.com
+    url: http://github.com/minixalpha
   - class: icon-twitter
     url: http://twitter.com
   - class: icon-google-plus
@@ -110,7 +110,7 @@ customLinks:
 #comment config
 disqus:
   config: false
-  id: minixbeta
+  id: minixalpha
 
 
 #################################### global configure #######################################
@@ -123,7 +123,7 @@ highlighter: pygments
 title: 飞鸟集
 description: 人生到处知何似，应似飞鸿踏雪泥
 theme: kunka
-disqusname: minixbeta
+disqusname: minixalpha
 
 # theme can be: hack, leap-day, merlot, midnight, minimal, modernist, slate, time-machine, kunka
 # those themes are all come from GitHub Pages Themes
