--- a/_config.yml
+++ b/_config.yml
@@ -110,7 +110,7 @@ customLinks:
 #comment config
 disqus:
   config: false
-  id: minixalpha
+  id: minixbeta
 
 
 #################################### global configure #######################################
